Update other external JUnit versions, fixed azure-core-test issue, added flag in test run